# autoclips

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
config/: settings.yaml  voices.yaml
config/niches/: _default.yaml  finance.yaml
src/: __init__.py  main.py
src/agents/: __init__.py  functions.py
src/core/: __init__.py  config.py  database.py  project.py
src/generators/: __init__.py  ideas.py  llm.py  metadata.py  script.py  voice.py
src/media/: __init__.py  assembler.py  captions.py  footage.py
