[project]
name = "autoclips"
version = "0.1.0"
description = "AI-powered short-form video generation pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Video processing
    "moviepy>=1.0.3",
    "Pillow>=10.0.0",

    # AI/LLM
    "anthropic>=0.39.0",
    "openai>=1.0.0",

    # APIs
    "httpx>=0.27.0",
    "elevenlabs>=1.0.0",

    # Data & Config
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Database
    "sqlalchemy>=2.0.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
autoclips = "src.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
